--- a/popup/css/styles.css
+++ b/popup/css/styles.css
@@ -1,11 +1,11 @@
 #searchbar {
   display: flex;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 #query {
   font-family: 'Montserrat', sans-serif;
-  max-width: 80%;
+  width: 300px;
   text-align: center;
   font-size: 12px;
   border: none;
@@ -17,9 +17,20 @@
 }
 
 #search {
-  max-width: 20%;
+  max-width: 20px;
+}
+
+#search:hover {
+  cursor: pointer;
 }
 
 body {
   font-family: 'Montserrat', sans-serif;
+  padding: 10px;
+}
+
+
+#MSlogo {
+  height: 30px;
+  margin-right: 10px;
 }
